# QnA-trial

./: docker-compose.yml  readme.md
backend/: .gitignore  Dockerfile  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  deps.py  questions.py  webhooks.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: question.py  user.py  webhook.py
backend/app/schemas/: question.py  user.py
backend/app/services/: auth_service.py  question_service.py  rag_service.py  user_service.py  webhook_service.py  ws_service.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: QuestionCard.tsx
frontend/src/lib/: api.ts  legacyApi.ts  types.ts
